# cdxf

./: .env.example  .gitignore  CHANGELOG.md  LOGBOOK.md  README.md  findings.md  pyproject.toml
benchmarks/: protocols_exp005_014.md
benchmarks/configs/: exp_001_size_fidelity.yaml
benchmarks/results/exp_001/: environment.json  exp_001_results.json  feature_matrix.json
benchmarks/results/exp_002/: environment.json  exp_002_results.json
benchmarks/results/exp_003/: exp_003_results.json
benchmarks/results/exp_004/: exp_004_results.json
benchmarks/results/exp_005/: checkpoint.json  file_detail.csv  repo_summary.csv  summary_stats.json
benchmarks/results/exp_006/: aggregate_results.json  feature_matrix.json  fidelity_results.csv
benchmarks/results/exp_007/: converter_scaling.json  migration_results.csv  summary.json
benchmarks/results/exp_008/: bundle_results.csv  cross_format_emit.json  summary.json
benchmarks/results/exp_009/: pipeline_results.csv  summary.json
benchmarks/results/exp_010/: environment.json  exp_010_results.json  format_tax.csv  throughput_results.csv
benchmarks/results/exp_011/: comment_ablation.csv  comment_contribution.csv  context_projections.csv  exp_011_results.json  syntax_tax_results.csv
benchmarks/results/exp_012/: call_result_tokens.csv  exp_012_results.json  provider_comparison.csv  scaling_analysis.csv
benchmarks/results/exp_013/: degradation_curves.csv  exp_013_results.json  summary.csv
benchmarks/results/exp_014/: compounding_curves.csv  exp_014_results.json  pipeline_results.csv  scaling_analysis.csv
benchmarks/results/exp_015/: exp_015_results.json  (+1 more)
benchmarks/src/: collect_corpus.py  config_corpus.py  diagnose_failures.py  diagnose_toml.py  diagnose_xml_size.py  profile_encode.py  run_exp001.py  run_exp002.py  run_exp003.py  run_exp004.py  run_exp005.py  run_exp006.py  run_exp007.py  run_exp008.py  run_exp009.py  run_exp010.py  run_exp011.py  run_exp012.py  run_exp013.py  run_exp014.py  run_exp015.py  run_exp016.py  run_exp017.py  run_exp018.py  run_exp019.py  run_feature_matrix.py
data/: DATA_README.md  checksums.sha256
docs/: binary_encoding.md  information_model.md  literature_survey_universal_binary_interchange.md
src/cdxf/: __init__.py  cli.py  codec.py  model.py  tags.py
tests/: test_bridge_json.py  test_bridge_toml.py  test_bridge_xml.py  test_bridge_yaml.py  test_claims.py  test_cli.py  test_codec.py  test_config_corpus.py  test_exp005.py  test_exp006.py  test_exp007.py  test_exp008.py  test_exp009.py  test_exp010.py  test_exp011.py  test_exp012.py  test_exp013.py  test_exp014.py  test_exp015.py  test_exp016.py  test_exp017.py  test_exp018.py  test_exp019.py  test_model.py  test_structural_fidelity.py
(+79 files in other folders)
