[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdxf"
version = "0.1.0"
description = "Compact Data Exchange Format -- universal binary interchange for JSON, YAML, XML, and TOML"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Muntaser Syed", email = "jemsbhai@gmail.com"},
]
keywords = ["serialization", "binary", "interchange", "json", "yaml", "xml", "toml", "cbor"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats",
]

[project.urls]
Homepage = "https://github.com/jemsbhai/cdxf"
Repository = "https://github.com/jemsbhai/cdxf"
Issues = "https://github.com/jemsbhai/cdxf/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
